Fix scrollbar issue

--- a/apps/frontend/src/app/photo-container/photo-container.component.scss
+++ b/apps/frontend/src/app/photo-container/photo-container.component.scss
@@ -1,7 +1,6 @@
 @use 'sizes' as *;
 
 .container {
-  height: 100%;
   margin: 0;
   padding: $spacing-s;
   display: flex;
